<resources>
    <string name="app_name">Court</string>
    <string name="bottomButton1">Play</string>
    <string name="bottomButton2">Court</string>
    <string name="bottomButton3">Invites</string>
    <string name="bottomButton4">Profile</string>
    <string name="title_activity_view_user_login">ViewUserLogin</string>
    <string name="profile_image">profile_image</string>
    <string name="divider">|</string>
    <string name="edit_note">CLICK THE PORTRAIT TO EDIT YOUR PROFILE</string>
    <string name="information">Information</string>
    <string name="icon_contact">icon_contact</string>
    <string name="phone">Phone</string>
    <string name="_90_531_6921923">+90 531 6921923</string>
    <string name="interests">Interests</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="photoButton">PhotoButton</string>
    <string name="username">username</string>
    <string name="nickname">NICKNAME</string>
    <string name="take_a_photo">Camera</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

</resources>