<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/constant_background_color"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll_profile_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_up_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:cardCornerRadius="20sp"
            app:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/ll_profile_head_information_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_custom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:contentDescription="@string/profile_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile_default" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="7dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/image_button"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@color/cardview_shadow_end_color"
                            android:contentDescription="@string/photoButton"
                            android:src="@drawable/camera"
                            app:tint="@color/white" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_profile_head_information"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/username"
                        android:textSize="@dimen/small_text_size"
                        android:textStyle="italic">

                    </TextView>

                    <EditText
                        android:id="@+id/profile_fullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:gravity="center_horizontal"
                        android:inputType="text"
                        android:text="@string/nickname"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size"
                        android:textStyle="bold"
                        tools:ignore="LabelFor" />

                    <LinearLayout
                        android:id="@+id/ll_profile_location_and_join_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/profile_location"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:autofillHints=""
                            android:gravity="center|left"
                            android:inputType="text"
                            android:text="@string/location"
                            tools:ignore="LabelFor,RtlHardcoded" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/divider"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/profile_joined_date"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:autofillHints=""
                            android:gravity="center"
                            android:text="@string/birthday"
                            tools:ignore="LabelFor,TextFields" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_down_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|fill_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingBottom="30dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/phone"
                        android:gravity="center"
                        android:src="@drawable/telephone"
                        tools:ignore="RtlSymmetry" />

                    <EditText
                        android:id="@+id/profile_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:gravity="center"
                        android:inputType="phone"
                        android:text="@string/phone_number"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:ignore="LabelFor,RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_profile_interests"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:orientation="horizontal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_margin="20dp"
                tools:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/edit_save_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/save"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/edit_cancel_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey_constant"
                    android:text="@string/cancel"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>