<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/constant_background_color"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll_profile_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_up_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:cardCornerRadius="20sp"
            app:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/ll_profile_head_information_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_custom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_image"
                    android:src="@drawable/profile_default" />

                <LinearLayout
                    android:id="@+id/ll_profile_head_information"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="italic">

                    </TextView>

                    <TextView
                        android:id="@+id/profile_fullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"

                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size"
                        android:textStyle="bold">

                    </TextView>

                    <LinearLayout
                        android:id="@+id/ll_profile_location_and_join_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/profile_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:text=""
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/divider"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/profile_joined_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_down_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"

                >

                <TextView
                    android:id="@+id/profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/edit_note"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp">


                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/customborder"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingBottom="30dp"


                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:src="@drawable/telephone"
                        android:contentDescription="@string/icon_contact">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:paddingStart="15sp"

                        android:text="@string/phone"
                        android:textSize="18sp"
                        tools:ignore="RtlSymmetry">

                    </TextView>

                    <TextView
                        android:id="@+id/profile_phone_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded,SpUsage">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="@string/interests"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_profile_interests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:orientation="horizontal" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>